Fixed some layout issues with pat auto suggest

--- a/_sass/libraries/patterns/components/_auto-suggest.scss
+++ b/_sass/libraries/patterns/components/_auto-suggest.scss
@@ -28,13 +28,13 @@ Version: 3.4.3 Timestamp: Tue Sep 17 06:47:14 PDT 2013
 }
 
 .select2-container, .select2-drop {
-  box-sizing: border-box;
+  @include box-sizing();
 }
 
 .select2-search {
-  box-sizing: border-box;
+  @include box-sizing();
   input {
-    box-sizing: border-box;
+    @include box-sizing();
   }
 }
 
@@ -51,6 +51,7 @@ Version: 3.4.3 Timestamp: Tue Sep 17 06:47:14 PDT 2013
     color: #444;
     text-decoration: none;
     border-radius: 0.5em;
+    @include box-sizing();
     background-clip: padding-box;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -235,6 +236,7 @@ Version: 3.4.3 Timestamp: Tue Sep 17 06:47:14 PDT 2013
 .select2-container-active {
   .select2-choice, .select2-choices {
     border: 1px solid #5897fb;
+    @include box-sizing();
     outline: none;
     // -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     // box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
@@ -259,6 +261,7 @@ Version: 3.4.3 Timestamp: Tue Sep 17 06:47:14 PDT 2013
     .select2-choice, .select2-choices {
       border: 1px solid #5897fb;
       border-top-color: transparent;
+      @include box-sizing();
       // background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, white), color-stop(0.5, #eeeeee));
       // background-image: -webkit-linear-gradient(center top, white 0%, #eeeeee 50%);
       // background-image: -moz-linear-gradient(center top, white 0%, #eeeeee 50%);
